# wani

./: .gitignore  .mcp.json  FRONTEND_IMPLEMENTATION_SUMMARY.md  RAILWAY_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  railway.toml
.claude/: settings.local.json
.github/: SECRETS_SETUP.md
backend/: .dockerignore  .env.example  .gitignore  API_TESTING.md  AUTH_ENDPOINTS_IMPLEMENTATION.md  Dockerfile  JWT_USAGE_GUIDE.md  LOGIN_IMPLEMENTATION_SUMMARY.md  RESEND_SETUP.md  TESTING_CHECKLIST.md  alembic.ini  check_migration.py  check_users.py  delete_single_user.py  delete_test_users.py  docker-compose.yml  nixpacks.toml  pyproject.toml  requirements.txt  run_server.py  test_rate_limiting.py  test_simple_login.py  verify_users_table.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_22_1038-b4be53f2a302_create_users_table.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/routes/: __init__.py  auth.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  logger.py  rate_limit.py  security.py
backend/app/middleware/: __init__.py  error_handler.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  common.py  user.py
backend/app/services/: __init__.py  email_service.py  stellar_service.py  user_service.py
backend/scripts/: test_stellar.py
docs/: 1. PRD.md  2. Architecture.md  3. Product Backlog.md  4. Sprint Plan s.1.md  5. Tasks s.1.md  6. Cierre de Dia.md  claude.md  design.md  errors.md  github.md  planning.md  prd.md  progress.md  (+2 more)
(+145 files in other folders)
